# databased

./: .gitignore  Cargo.toml
data/wal/: wal_01
src/: bytecode_serializer.rs  errors.rs  filesystem.rs  in_memory.rs  io_handler.rs  kvstore.rs  log.rs  lru_cache.rs  main.rs  operation.rs  parser.rs  persistent.rs  tcp_adapter.rs  wal_io.rs
src/persistent/: block.rs  errors.rs  mod.rs
